# solana-bootcamp-anchor-event-manager

./: Anchor.toml  README.md
programs/event-manager/: Cargo.toml
programs/event-manager/src/: event.rs  lib.rs
programs/event-manager/src/collections/: event.rs
programs/event-manager/src/instructions/: buy_tickets.rs  close_event.rs  create_event.rs  mod.rs  sponsor.rs  sponsor_event.rs  withdraw_funds.rs
tests/: event-manager.test.ts  event-manager.ts  utils.ts
tests/utils/: mint.ts
