[package]
name = "event-manager"
version = "0.1.0"
description = "Program to manage events"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
